--- a/values.yaml
+++ b/values.yaml
@@ -8,7 +8,8 @@ image:
   repository: geopython/pygeoapi
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.12.0"
+  # tag: "0.12.0"
+  tag: latest
 
 imagePullSecrets: []
 nameOverride: ""
