--- a/files/docker.config.yml
+++ b/files/docker.config.yml
@@ -35,7 +35,7 @@ server:
     bind:
         host: 0.0.0.0
         port: 5000
-    url: http://localhost:5000/
+    url: http://geoserver.test/pygeoapi/
     mimetype: application/json; charset=UTF-8
     encoding: utf-8
     gzip: false
@@ -121,25 +121,44 @@ resources:
                   x_field: long
                   y_field: long
 
-    ne_110m_populated_places_simple:
+    # ne_110m_populated_places_simple:
+    #     type: collection
+    #     title: Populated Places
+    #     description: Point symbols with name attributes. Includes all admin-0 capitals and some other major cities. We favor regional significance over population census in determining our selection of places. Use the scale rankings to filter the number of towns that appear on your map.
+    #     keywords:
+    #         - populated places
+    #         - cities
+    #         - towns
+    #     links:
+    #         - type: text/html
+    #           rel: canonical
+    #           title: information
+    #           href: http://www.naturalearthdata.com/downloads/110m-cultural-vectors/110m-populated-places/
+    #           hreflang: en-US
+    #         - type: application/gzip
+    #           rel: canonical
+    #           title: download
+    #           href: http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_populated_places_simple.zip
+    #           hreflang: en-US
+    #     extents:
+    #         spatial:
+    #             bbox: [-180,-90,180,90]
+    #             crs: http://www.opengis.net/def/crs/OGC/1.3/CRS84
+    #     providers:
+    #         - type: feature
+    #           name: Elasticsearch
+    #           #Note elastic_search is the docker container of ES the name is defined in the docker-compose.yml
+    #           data: http://elastic_search:9200/ne_110m_populated_places_simple
+    #           id_field: geonameid
+
+    kibana-sample_data_flights:
         type: collection
-        title: Populated Places
-        description: Point symbols with name attributes. Includes all admin-0 capitals and some other major cities. We favor regional significance over population census in determining our selection of places. Use the scale rankings to filter the number of towns that appear on your map.
+        title: Kibana Sample Data Flights
+        description: Flight data shipped with Kibana.
         keywords:
-            - populated places
-            - cities
-            - towns
-        links:
-            - type: text/html
-              rel: canonical
-              title: information
-              href: http://www.naturalearthdata.com/downloads/110m-cultural-vectors/110m-populated-places/
-              hreflang: en-US
-            - type: application/gzip
-              rel: canonical
-              title: download
-              href: http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_populated_places_simple.zip
-              hreflang: en-US
+            - flights
+            - kibana
+        links: []
         extents:
             spatial:
                 bbox: [-180,-90,180,90]
@@ -148,8 +167,13 @@ resources:
             - type: feature
               name: Elasticsearch
               #Note elastic_search is the docker container of ES the name is defined in the docker-compose.yml
-              data: http://elastic_search:9200/ne_110m_populated_places_simple
-              id_field: geonameid
+              data: http://elasticsearch:9200/kibana_sample_data_flights
+              id_field: FlightNum
+              # Geometry does not work with elasticsearch
+              geometry:
+                  x_field: OriginLocation.lat
+                  y_field: OriginLocation.lon
+
 
     lakes:
         type: collection
